--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     max-width: 1000px;
     padding: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 h1{
@@ -16,6 +17,7 @@ input{
     width: 60%;
     max-width: 300px;
     font-size: 1rem;
+    margin-top: 2rem;
 }
 
 button{
@@ -27,6 +29,7 @@ button{
     cursor: pointer;
     font-weight: bold;
     font-size: 1rem;
+    outline: none;
 }
 
 button:hover{
