--- a/src/components/WeatherInformations5Days/WeatherInformations5Days.css
+++ b/src/components/WeatherInformations5Days/WeatherInformations5Days.css
@@ -1,32 +1,22 @@
 .weather-container{
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 10px;
-    padding: 20px;
-    margin: 20px 0;
-}
 
-h2{
-    font-size: 2rem;
-}
-
-.weather-info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img{
-        width: 100px;
+    h3{
+        margin-bottom: 15px;
+        font-size: 1.5rem;
     }
 }
-.temperature{
-    font-weight: bold;
-    font-size: 2.5rem;
-}
-.description{
-    text-transform: capitalize;
-    font-size: 1.3rem;
-    margin-bottom: 10px;
-}
-.details{
+
+.weather-list{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 0.5rem;
+}
+
+.weather-item{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5) ;
+    border-radius: 1rem;
+    padding: 1rem;
 }
