--- a/src/App.css
+++ b/src/App.css
@@ -11,24 +11,24 @@ h1{
 }
 
 input{
-    padding: 10px;
+    padding: 0.8rem;
     border: none;
     border-radius: 20px 0 0 20px;
     width: 60%;
-    max-width: 300px;
-    font-size: 1rem;
-    margin-top: 2rem;
+    max-width: 400px;
+    font-size: 1.3rem;
+    margin-top: 1rem;
 }
 
 button{
-    padding: 10px;
+    padding: 0.8rem;
     border: none;
     border-radius: 0 20px 20px 0;
     background-color: #ff9800;
     color: #fff;
     cursor: pointer;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.3rem;
     outline: none;
 }
 
